Added theme and SASS build system

--- a/site/src/main/webapp/index.xhtml
+++ b/site/src/main/webapp/index.xhtml
@@ -2,8 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view transient="true">
-    <f:metadata>
-        <f:viewAction action="#{request.getRequestDispatcher('/docs/accordion').forward(request, facesContext.externalContext.response)}"/>
-    </f:metadata>
+    <h1>TornadoFaces</h1>
+    
+    <p><a href="/docs/accordion">Docs</a></p>
+    
+    <!--<f:metadata>-->
+        <!--<f:viewAction action="#{request.getRequestDispatcher('/docs/accordion').forward(request, facesContext.externalContext.response)}"/>-->
+    <!--</f:metadata>-->
 </f:view>
 </html>
