--- a/site/src/main/webapp/index.xhtml
+++ b/site/src/main/webapp/index.xhtml
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view transient="true">
+<f:view>
     <f:metadata>
         <f:viewAction action="#{request.getRequestDispatcher('/docs/index.xhtml').forward(request, facesContext.externalContext.response)}"/>
     </f:metadata>
